deploy/05-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: prodev-k8s-start
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      role: postgres
  template:
    metadata:
      labels:
        role: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-persistent-storage-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-persistent-storage-claim
      annotations:
        volume.beta.kubernetes.io/storage-class: "standard"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
