deploy/07-ghi-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ghi
  namespace: prodev-k8s-start
  labels:
    role: ghi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: ghi
  template:
    metadata:
      labels:
        role: ghi
    spec:
      containers:
      - name: ghi
        image: orchestrated-ghi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
             path: /
             port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
