deploy/03-mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: prodev-k8s-start
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
