deploy/06-postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prodev-k8s-start
  labels:
    name: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    role: postgres
