deploy/08-ghi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghi
  namespace: prodev-k8s-start
  labels:
    role: ghi
spec:
  ports:
   - protocol: TCP
     port: 80
  selector:
    role: ghi
