deploy/16-api-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api
  namespace: prodev-k8s-start
spec:
  rules:
  - http:
      paths:
      - path: /api/app
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
